# SQL-Agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DATABASE_FILTERING_IMPLEMENTATION.md  Dockerfile  HIERARCHICAL_MATCHING_IMPLEMENTATION.md  README.md  STREAMING_ARCHITECTURE.md  analyze_properties.py  docker-compose.yml  langgraph.json  pyproject.toml  requirements-override.txt  requirements.txt
.github/: copilot-instructions.md
backend/: CLAUDE.md  Dockerfile  pyproject.toml  requirements.txt
backend/agent/: CLAUDE.md  README.md  __init__.py
backend/agent/chat_workflow/: __init__.py  cli.py  graph.py
backend/agent/chat_workflow/nodes/: enrich_question.py  execute_query.py  generate_explanations.py  generate_query.py
backend/agent/chat_workflow/utils/: tools.py
backend/agent/database/: __init__.py  connection.py  models.py  schema.py  setup_database.py
backend/agent/llm/: client.py
backend/agent/models/: __init__.py  server.py
backend/agent/server/: server.py
backend/agent/tests/: __init__.py  test_server.py  test_server_integration.py
backend/agent/tests/chat_workflow/: test_api.py  test_db_wrapper.py  test_execute_query.py  test_graph.py  test_models.py  test_sql_transparency.py
backend/loadtests/: README.md  config.py  locustfile.py  run.sh
backend/loadtests/helpers/: data_factory.py  metrics.py  sse_client.py
backend/loadtests/report/: generate_report.py  template.md
backend/loadtests/shapes/: crud_only_shape.py  staged_shape.py
backend/loadtests/users/: crud_user.py  mixed_user.py  stream_user.py
backend/workflow/: README.md  __init__.py  main.py
backend/workflow/analysis_workflow/: graph.py  utils.py
backend/workflow/analysis_workflow/nodes/: __init__.py
backend/workflow/analysis_workflow/nodes/extraction/: extraction.py  extractors.py
backend/workflow/analysis_workflow/nodes/ingestion/: ingestion.py
backend/workflow/analysis_workflow/nodes/matching/: matching.py
backend/workflow/analysis_workflow/nodes/matching/utils/: filtering.py  hierarchy.py  matcher.py  normalizer.py
backend/workflow/analysis_workflow/nodes/persistence/: persistence.py
backend/workflow/analysis_workflow/nodes/reporting/: excel_generator.py  reporting.py
backend/workflow/config/: config_loader.py
backend/workflow/database/: __init__.py  models.py  operations.py  schema.py  setup_database.py
backend/workflow/database/seed/: README.md  __init__.py  archetypes.yaml  factories.py  seed_database.py
backend/workflow/inventory/: import_inventory.py  networktraces.txt  parser.py
backend/workflow/llm/: client.py
backend/workflow/models/: __init__.py  analysis_workflow.py  configs.py  email.py  inventory.py
backend/workflow/tests/: __init__.py  manual_e2e_test.py  test_config_loader.py  test_database.py  test_database_hierarchical_filtering.py  test_database_operations.py  test_extractors.py  test_hierarchical_filter.py  test_hierarchy.py  test_integration.py  test_inventory_loader.py  test_matcher.py  test_msg_reader.py  test_report.py  test_signature_cleaner.py  test_workflow.py
backend/workflow/utils/: property_enrichment.py
config/: products_config.yaml
database/: init.sql
docs/: README.md  STREAMING_AI_BRIEFING.md  STREAMING_QUICK_REFERENCE.md  STREAMING_VISUAL_GUIDE.md
frontend/: .dockerignore  CLAUDE.md  Dockerfile  README.md  next.config.js  package-lock.json  package.json
scripts/: import_inventory.py  setup_database.py
src/: __init__.py  main.py
(+124 files in other folders)
