[project]
name = "backend-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "fastapi==0.128.5",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "jiter==0.13.0",
    "jsonpatch==1.33",
    "jsonpath-ng==1.7.0",
    "jsonpointer==3.0.0",
    "langchain-community>=0.4.1",
    "langchain-core==1.2.9",
    "langchain-openai==1.1.8",
    "langchain-redis==0.2.5",
    "langgraph>=1.0.8",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langsmith==0.6.9",
    "markupsafe==3.0.3",
    "mimesis>=19.1.0",
    "ml-dtypes==0.5.4",
    "numpy==2.4.2",
    "openai==2.17.0",
    "orjson==3.11.7",
    "packaging==26.0",
    "ply==3.11",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dotenv==1.2.1",
    "python-ulid==3.1.0",
    "pyyaml==6.0.3",
    "redis==7.1.0",
    "redisvl==0.14.0",
    "regex==2026.1.15",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.46",
    "starlette==0.52.1",
    "tenacity==9.1.4",
    "tiktoken==0.12.0",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uuid-utils==0.14.0",
    "uvicorn>=0.40.0",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "locust>=2.43.3",
    "pytest>=9.0.2",
    "pytest-async>=0.1.1",
    "pytest-cov>=7.0.0",
]
